@@ -16,7 +16,7 @@
  */
 package org.apache.camel.component.avro;
 
-import java.net.URL;
+import java.net.URI;
 
 import org.apache.avro.ipc.HttpTransceiver;
 import org.apache.avro.ipc.Transceiver;
@@ -31,6 +31,6 @@ public class AvroHttpProducer extends AvroProducer {
 
     @Override
     public Transceiver createTransceiver() throws Exception {
-        return new HttpTransceiver(new URL(URISupport.normalizeUri(getEndpoint().getEndpointUri())));
+        return new HttpTransceiver(URI.create(URISupport.normalizeUri(getEndpoint().getEndpointUri())).toURL());
     }
 }
